--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-read-more-read-less": "^1.0.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
